Changes to proxytunnel version 1.1.0 -- Sat Apr 20 16:00:00 CET 2002

- Added the -a (--standalone=INT) option. It is mutually exclusive with
  -i (--inetd), and it instructs proxytunnel to fork in the background
  as a standalone daemon, listening on connections on the specified
  port and forwarding these connections through the specified
  proxy/tunnel.

Changes to proxytunnel version 1.0.8 -- Fri Apr 19 10:25:00 CET 2002

- Fixed help-text when system doesn't support long-options
- Cleaned up some code w.r.t short and/or long options, added includes
  for getopt on freebsd.

Changes to proxytunnel version 1.0.7 -- Wed Nov 28 09:49:41 CET 2001

- Added rpm spec file by Ralph Loader <suckfish@ihug.co.nz> -- Maniac
- Updated textfiles

Changes to proxytunnel version 1.0.7 -- Sat Nov 24 12:32:02 CET 2001

- Applied patch from "Andrew Griffiths" <nullptr@tasmail.com> to fix
  possible string format attacks. -- Maniac
- Some code cleanup and reformatting -- Maniac
- Added '-q' / '--quiet' flag to suppress status messages, Proxytunnel
  can now be completely quiet and transparent. (Not when also providing
  the '-v' flag naturally) -- Maniac
- Changed ipbuf size to 16, which should be enough. -- Maniac

Changes to proxytunnel version 1.0.6 -- Thu Nov 22 10:38:10 CET 2001

- Added support for compiling on Solaris, uncomment some lines in the
  Makefile to enable this, patch from: Martin Senft <martin@illicon.de>
- Included (modified) patch from Ralph Loader <suckfish@ihug.co.nz> to
  work around broken DNS resolving in some proxies when using DynDNS
  hosts (the -n or --dottedquad option) -- Maniac

Changes to proxytunnel version 1.0.5 -- Mon Nov 19 21:26:45 CET 2001

- Added support for running from inetd, using the --inetd option or
  the -i option. Also some cleanups in the tunneling code -- Muppet

Changes to proxytunnel version 1.0.4 -- Sun Nov 11 00:44:39 CET 2001

- All the code by Jos and Mark now covered under GPL, the few lines of