@@ -1,0 +1,5 @@
+/* Proxytunnel base64.h */
+
+void base64(unsigned char *out, const unsigned char *in, int len);
+char basicauth[80];   /* Buffer to hold the proxies basic authentication data */
+
